--- a/src/main/resources/templates/orders/mysells.html
+++ b/src/main/resources/templates/orders/mysells.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" th:href="@{mall/css/iconfont.css}">
 <link rel="stylesheet" th:href="@{mall/styles/cart.css}">
 <link rel="stylesheet" th:href="@{'/mall/styles/search.css'}">
+<link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/sweetalert2.css}"/>
 <body>
 <!-- nav -->
 <nav th:replace="mall/header::nav-fragment"></nav>
@@ -49,7 +50,7 @@
                                 </th:block>
                                 <th:block th:if="${item.status=='未发货'}">
                                     <span style="margin-left: 50px;">
-                                        <button type="button" class="btn btn-primary" id="force" style="width: 60px; background: #45bc4b; margin-top: 7px; margin-left: 50px;" th:onclick="'javascript:;'">去发货</button>
+                                        <button type="button" class="btn btn-primary" id="force" style="width: 60px; background: #45bc4b; margin-top: 7px; margin-left: 50px;" th:onclick="'javascript:goDeliver('+${item.id}+');'">去发货</button>
                                     </span>
                                 </th:block>
                                 <th:block th:if="${item.status=='已评价'}">
@@ -260,11 +261,45 @@
 <!-- Bootstrap 3 -->
 <script th:src="@{/mall/js/bootstrap3.js}"></script>
 <script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
-<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
+<!--<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>-->
+<script th:src="@{/admin/plugins/sweetalert/sweetalert2.js}"></script>
 <script type="text/javascript">
     $(function () {
 
     });
+    function goDeliver(id){
+        var data={
+            orderId: id
+        }
+        $.ajax({
+            url : "/goDeliver",
+            type : "POST",
+            data : JSON.stringify(data),
+            dataType: 'json',
+            contentType:'application/json;charset=UTF-8', //contentType很重要
+            success : function(result) {
+                if(result.type = "0"){
+                    swal({
+                        type: 'success',
+                        html: '发货成功！',
+                        timer: 2000,
+                        showConfirmButton: false
+                    });
+                    setTimeout(function (){
+                        window.location.reload();
+                    },2000);
+
+                }else{
+                    swal({
+                        type: 'error',
+                        html: '发货失败！',
+                        timer: 2000,
+                        showConfirmButton: false
+                    });
+                }
+            }
+        })
+    }
 
 </script>
 </body>
