0520 完善特卖竞拍

--- a/src/main/resources/templates/goods/search.html
+++ b/src/main/resources/templates/goods/search.html
@@ -229,7 +229,7 @@
                             <p class="name" th:text="${good.name}">NewBeeMall</p>
                             <!--<p class="item_price" th:text="${good.mark}">NewBeeMall</p>-->
                             <p class="item_price" th:text="${good.mark.length()>15}?${good.mark.substring(0,15)}+'...' : ${good.mark}">NewBeeMall</p>
-                            <p class="price" style="color: red" th:text="'￥'+${good.reservePrice}">NewBeeMall</p>
+                            <p class="price" style="color: red" th:text="'￥'+${good.reservePrice}+' 起'">NewBeeMall</p>
                         </a>
                     </li>
                 </th:block>
