--- a/src/main/resources/templates/goods/detail.html
+++ b/src/main/resources/templates/goods/detail.html
@@ -24,49 +24,92 @@
                 <img th:src="@{${goodsDetail.img}}">
             </div>
         </div>
-        <div class="right fr">
-            <div class="h3 ml20 mt20" th:text="${goodsDetail.name}">NewBeeMall</div>
-            <div class="sub_title mr40 ml20 mt10" th:text="${goodsDetail.mark}">NewBeeMall</div>
-            <div class="sub_title mr40 ml20 mt10" th:text="${goodsDetail.description}">NewBeeMall</div>
-            <div class="item_price mr40 ml20 mt10" style="float: left; width: 300px;">
-                <span>当前最高出价：</span><span id="curHigheastPrice" style="width: 100px; color: red">暂无</span>
-                <div>
-                    <span style="width: 130px;">每次最少加价：</span><span style="color: red"><th:block th:text="${goodsDetail.leastEachPriceIncrease}+'元'"></th:block></span>
+        <th:block th:if="${goodsDetail.onSale} == true">
+            <div class="right fr">
+                <div class="h3 ml20 mt20" th:text="${goodsDetail.name}">NewBeeMall</div>
+                <div class="sub_title mr40 ml20 mt10" th:text="${goodsDetail.mark}">NewBeeMall</div>
+                <div class="sub_title mr40 ml20 mt10" th:text="${goodsDetail.description}">NewBeeMall</div>
+                <div class="item_price mr40 ml20 mt10" style="float: left; width: 300px;">
+                    <span style="width: 130px;">一口价：</span><th:block th:text="${goodsDetail.reservePrice}+'元'"></th:block>
                 </div>
 
-                <span style="width: 130px;">起拍价：</span><th:block th:text="${goodsDetail.reservePrice}+'元'"></th:block>
-            </div>
+                <div class="order">
+                    <th:block th:if="${goodsDetail.userId} == ${session.User.getId()}">
+                        <input class="car" type="button" th:onclick="" value="修改信息"/>
+                        <input class="car" type="button" th:onclick="'endAuction()'" value="结束拍卖"/>
+                    </th:block>
+                    <th:block th:unless="${goodsDetail.userId} == ${session.User.getId()}">
+                        <input class="car" type="button" th:onclick="'buy()'" value="立即购买"/>
+                        <input class="car" type="button" th:onclick="'saveToCart('+${goodsDetail.id}+')'" value="加入购物车"/>
+                    </th:block>
+                </div>
+                <!--            <div class="tb-extra ml20" id="J_tbExtra">-->
+                <!--                <dl>-->
+                <!--                    <dt>承诺</dt>-->
+                <!--                    <dd><a class="J_Cont" title="满足7天无理由退换货申请的前提下，包邮商品需要买家承担退货邮费，非包邮商品需要买家承担发货和退货邮费。" href="#"-->
+                <!--                           target="_blank"><img th:src="@{/mall/image/7d.jpg}">7天无理由</a></dd>-->
+                <!--                </dl>-->
+                <!--                <dl>-->
+                <!--                    <dt>支付</dt>-->
+                <!--                    <dd><a href="##" target="_blank"><img th:src="@{/mall/image/hua.png}">蚂蚁花呗</a><a href="##"-->
+                <!--                                                                                                     target="_blank"><img-->
+                <!--                            th:src="@{/mall/image/card.png}">信用卡支付</a><a href="##" target="_blank"><img-->
+                <!--                            th:src="@{/mall/image/ji.png}">集分宝</a></dd>-->
+                <!--                </dl>-->
+                <!--                <dl>-->
+                <!--                    <dt>支持</dt>-->
+                <!--                    <dd>折旧变现，买新更省钱。<a style="float:none;text-decoration: underline;" href="##">详情</a></dd>-->
+                <!--                </dl>-->
 
-            <div class="order">
-                <th:block th:if="${goodsDetail.userId} == ${session.User.getId()}">
-                    <input class="car" type="button" th:onclick="" value="修改信息"/>
-                    <input class="car" type="button" th:onclick="'endAuction()'" value="结束拍卖"/>
-                </th:block>
-                <th:block th:unless="${goodsDetail.userId} == ${session.User.getId()}">
-                    <input class="car" type="button" th:onclick="'giveBid()'" value="立即出价"/>
-                    <input class="car" type="button" th:onclick="'saveToCart('+${goodsDetail.id}+')'" value="加入购物车"/>
-                </th:block>
+                <!--            </div>-->
             </div>
-<!--            <div class="tb-extra ml20" id="J_tbExtra">-->
-<!--                <dl>-->
-<!--                    <dt>承诺</dt>-->
-<!--                    <dd><a class="J_Cont" title="满足7天无理由退换货申请的前提下，包邮商品需要买家承担退货邮费，非包邮商品需要买家承担发货和退货邮费。" href="#"-->
-<!--                           target="_blank"><img th:src="@{/mall/image/7d.jpg}">7天无理由</a></dd>-->
-<!--                </dl>-->
-<!--                <dl>-->
-<!--                    <dt>支付</dt>-->
-<!--                    <dd><a href="##" target="_blank"><img th:src="@{/mall/image/hua.png}">蚂蚁花呗</a><a href="##"-->
-<!--                                                                                                     target="_blank"><img-->
-<!--                            th:src="@{/mall/image/card.png}">信用卡支付</a><a href="##" target="_blank"><img-->
-<!--                            th:src="@{/mall/image/ji.png}">集分宝</a></dd>-->
-<!--                </dl>-->
-<!--                <dl>-->
-<!--                    <dt>支持</dt>-->
-<!--                    <dd>折旧变现，买新更省钱。<a style="float:none;text-decoration: underline;" href="##">详情</a></dd>-->
-<!--                </dl>-->
+        </th:block>
+        <th:block th:if="${goodsDetail.onSale} == false">
+            <div class="right fr">
+                <div class="h3 ml20 mt20" th:text="${goodsDetail.name}">NewBeeMall</div>
+                <div class="sub_title mr40 ml20 mt10" th:text="${goodsDetail.mark}">NewBeeMall</div>
+                <div class="sub_title mr40 ml20 mt10" th:text="${goodsDetail.description}">NewBeeMall</div>
+                <div class="item_price mr40 ml20 mt10" style="float: left; width: 300px;">
+                    <span>当前最高出价：</span><span id="curHigheastPrice" style="width: 100px; color: red">暂无</span>
+                    <div>
+                        <span style="width: 130px;">每次最少加价：</span><span style="color: red"><th:block th:text="${goodsDetail.leastEachPriceIncrease}+'元'"></th:block></span>
+                    </div>
 
-<!--            </div>-->
-        </div>
+                    <span style="width: 130px;">起拍价：</span><th:block th:text="${goodsDetail.reservePrice}+'元'"></th:block>
+                </div>
+
+                <div class="order">
+                    <th:block th:if="${goodsDetail.userId} == ${session.User.getId()}">
+                        <input class="car" type="button" th:onclick="" value="修改信息"/>
+                        <input class="car" type="button" th:onclick="'endAuction()'" value="结束拍卖"/>
+                    </th:block>
+                    <th:block th:unless="${goodsDetail.userId} == ${session.User.getId()}">
+                        <input class="car" type="button" th:onclick="'giveBid()'" value="立即出价"/>
+                        <input class="car" type="button" th:onclick="'saveToCart('+${goodsDetail.id}+')'" value="加入购物车"/>
+                    </th:block>
+                </div>
+                <!--            <div class="tb-extra ml20" id="J_tbExtra">-->
+                <!--                <dl>-->
+                <!--                    <dt>承诺</dt>-->
+                <!--                    <dd><a class="J_Cont" title="满足7天无理由退换货申请的前提下，包邮商品需要买家承担退货邮费，非包邮商品需要买家承担发货和退货邮费。" href="#"-->
+                <!--                           target="_blank"><img th:src="@{/mall/image/7d.jpg}">7天无理由</a></dd>-->
+                <!--                </dl>-->
+                <!--                <dl>-->
+                <!--                    <dt>支付</dt>-->
+                <!--                    <dd><a href="##" target="_blank"><img th:src="@{/mall/image/hua.png}">蚂蚁花呗</a><a href="##"-->
+                <!--                                                                                                     target="_blank"><img-->
+                <!--                            th:src="@{/mall/image/card.png}">信用卡支付</a><a href="##" target="_blank"><img-->
+                <!--                            th:src="@{/mall/image/ji.png}">集分宝</a></dd>-->
+                <!--                </dl>-->
+                <!--                <dl>-->
+                <!--                    <dt>支持</dt>-->
+                <!--                    <dd>折旧变现，买新更省钱。<a style="float:none;text-decoration: underline;" href="##">详情</a></dd>-->
+                <!--                </dl>-->
+
+                <!--            </div>-->
+            </div>
+        </th:block>
+
         <div class="clear"></div>
     </div>
     <!-- 这里使用的是 th:utext 标签，用 th:text 不会解析 html，用 th:utext 会解析 html -->
@@ -408,6 +451,35 @@
 
 
 
+    function buy(){
+
+        swal({
+            title: '特卖商品，确定直接购买吗?',
+            text: "You won't be able to revert this!",
+            type: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: '确定!'
+        }).then(function(isConfirm) {
+            if (isConfirm) {
+                console.log("first?")
+                //var bidPrice = Number(reservePrice);//人民币换成ETH
+                //var toEther = bidPrice/22268;
+                //auctionContract.methods.getBid(merchId, userId, bidPrice).send({from: userAddress, value: web3.utils.toWei(toEther.toString(), "ether"), gas: 2000000});
+
+                endAuction();
+                window.setTimeout("window.location='/orders'",2000);
+
+            }
+        })
+        console.log("second?")
+        var bidPrice = Number(reservePrice);//人民币换成ETH
+        var toEther = bidPrice/22268;
+        auctionContract.methods.getBid(merchId, userId, bidPrice).send({from: userAddress, value: web3.utils.toWei(toEther.toString(), "ether"), gas: 2000000});
+
+    }
+
 
     function giveBid(){
         auctionContract.methods.getAucInfo(merchId).call().then(function (result){
@@ -449,6 +521,7 @@
                                 html: '出价成功！ ',
                                 timer: 2000
                             });
+                            window.setTimeout("window.location.reload()",1000);
                         }else{
                             swal({
                                 type: 'error',
@@ -510,6 +583,7 @@
                                 html: '订单已生成！',
                                 timer: 2000
                             });
+                            window.setTimeout("window.location='/orders'",2000);
                         }else{
                             swal({
                                 type: 'error',
