--- a/src/main/resources/templates/mall/header.html
+++ b/src/main/resources/templates/mall/header.html
@@ -30,7 +30,7 @@
     <div class="center">
         <ul class="fl">
             <li><a th:href="@{/mall/index}">首页</a></li>
-            <li><a th:href="@{/mall/index}">特卖商品</a></li>
+            <li><a th:href="@{/mall/onsale}">特卖商品</a></li>
             <li><a th:href="@{/mall/index}">明拍商品</a></li>
             <li><a th:href="@{/mall/index}">暗拍商品</a></li>
             <!--<li><a th:href="@{/admin}">后台管理系统</a></li>
